--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_locales: ^3.0.1
   flutter_svg: ^1.0.3
   flutter_bloc: ^8.1.3
+  shamsi_date: ^1.0.1
   dart_utils:
     git:
       url: https://github.com/arfoon/dart_utils.git
